--- a/index.html
+++ b/index.html
@@ -36,12 +36,12 @@
       <p>Fill out this form and one of our trainers will schedule a consult.</p>
       <!-- adding the form stuff-->
       <form action="">
-        <label for="name">Enter full name</label>
-        <input type="text" placeholder="Your Name" name="name" id="name" />
-        <label for="email">Enter Email Address</label>
-        <input type="email" placeholder="Email Address" name="email" id="email" />
-        <label for="phone">Enter phone number</label>
-        <input type="tel" placeholder="Phone Number" name="phone" id="phone">
+        <label for="name">Enter full name:</label>
+        <input type="text" placeholder="Your Name" name="name" id="name" class="form-input">
+        <label for="email">Enter email address:</label>
+        <input type="text" placeholder="Email Address" name="email" id="email" class="form-input">
+        <label for="phone">Enter a telephone number:</label>
+        <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
         <p>
           Have you worked with a trainer before?
           <input type="radio" name="trainer-confirm" id="trainer-yes" />
