--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <!-- navigation -->
 <header>
-    <h1><a href="/">Run Buddy</a></h1>
+    <h1><a href="/">RUN BUDDY</a></h1>
     <nav>
         <ul>
             <li>
@@ -43,14 +43,14 @@
         <label for="phone">Enter a telephone number:</label>
         <input type="text" placeholder="Phone Number" name="phone" id="phone" class="form-input">
         <p>
-          Have you worked with a trainer before?
+          Have you worked out with a trainer before?
           <input type="radio" name="trainer-confirm" id="trainer-yes" />
           <label for="trainer-yes">Yes</label>
           <input type="radio" name="trainer-confirm" id="trainer-no" />
           <label for="trainer-no">No</label>
         </p>
         <p>
-          <label for="checkbox">I acknowledge that I am at least 18 years of age</label>
+          <label for="checkbox">I acknowledge that I am at least 18 years of age.</label>
           <input type="checkbox" name="age-confirm" id="checkbox" />
         </p>
         <button type="submit">Get Running</button>
@@ -58,13 +58,36 @@
   </section>
   
   <!-- "what we do" section -->
-  <section>
+  <section id="what-we-do">
     <h2>What We Do</h2>
+      <p>
+        butcher selfies chambray shabby chic gentrify readymade yr Echo Park XOXO Tumblr normcore Banksy direct trade Blue Bottle chillwave you probably haven't heard of them single-origin coffee Vice fanny pack fixie Odd Future Austin fingerstache pickled twee synth Wes Anderson Thundercats viral bitters flannel meggings narwhal Marfa Schlitz sustainable Intelligentsia umami deep v craft      
+      </p>
   </section>
   
   <!-- "what you do" section -->
-  <section>
+  <section id="what-you-do">
     <h2>What You Do</h2>
+    <div>
+      <img src="../module1/assets/images/step-1.svg" alt="">
+      <h3>Step 1: Fill Out the Form Above.</h3>
+      <p>You're already here, so why not?</p>
+    </div>
+    <div>
+      <img src="../module1/assets/images/step-2.svg" alt="">
+      <h3>Step 2: Consult with One of Our Trainers.</h3>
+      <p>Are you here to build musicle, lose weight, or just feel good?</p>
+    </div>
+    <div>
+      <img src="../module1/assets/images/step-3.svg" alt="">
+      <h3>Step 3: Get Running.</h3>
+      <p>Hit the ground running (literally) once your trainer lays out your plan.</p>
+    </div>
+    <div>
+      <img src="../module1/assets/images/step-4.svg" alt="">
+      <h3>Step 4: See Results.</h3>
+      <p>Bi-weekly checkins with your trainer will keep you foxused.</p>
+    </div>
   </section>
   
   <!-- "meet the trainers" section -->
