--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
   </section>
   
   <!-- "what you do" section -->
-  <section id="what-you-do">
+  <section id="what-you-do" class="steps">
     <h2>What You Do</h2>
     <div>
       <img src="../module1/assets/images/step-1.svg" alt="">
