--- a/index.html
+++ b/index.html
@@ -132,8 +132,32 @@
   </section>
   
   <!-- "reach out" section -->
-  <section>
-    <h2>Reach Out</h2>
+  <section id="Reach-Out" class="contact">
+    <h2 class="section-title secondary-border">Reach Out</h2>
+    <div class="contact-info">
+      <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2695.995085511787!2d-53.00371588418206!3d47.49000910401765!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4b0cb9c7f5a41623%3A0xce430fce491d016d!2s1%20Nolan%20Pl%2C%20Conception%20Bay%20South%2C%20NL%20A1X%203E4!5e0!3m2!1sen!2sca!4v1633901878412!5m2!1sen!2sca"
+       width="600" 
+       height="450" 
+       style="border:0;" 
+       allowfullscreen="" 
+       loading="lazy">
+      </iframe>
+      <div>
+        <h3>Run Buddy</h3>
+        <p>
+          Any Questions or concerns before signing up?
+        <br />
+          Let us know and we'll be happy to talk to you!
+          </p>
+          <address>
+            55 Main Street <br/>
+            Some Town, Ca <br/>
+            12345<br />
+            P: 555.RUN.BUDZ (555.786.2839)<br/>
+            E: <a href="mailto:info@runbuddy.io">info@runbuddy.io</a>
+          </address>
+      </div>
+    </div>
   </section>
   
   <!-- footer -->
